--- a/ShareTripSDK/Classes/MyBL/TVCells/AllServicesButtonCell.xib
+++ b/ShareTripSDK/Classes/MyBL/TVCells/AllServicesButtonCell.xib
@@ -34,8 +34,8 @@
                                                         <rect key="frame" x="39.333333333333329" y="0.0" width="40" height="40"/>
                                                         <color key="tintColor" systemColor="systemGreenColor"/>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flight" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oG1-Au-yYn">
-                                                        <rect key="frame" x="41.333333333333329" y="85" width="36" height="17"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Air" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oG1-Au-yYn">
+                                                        <rect key="frame" x="50.333333333333329" y="85" width="18" height="17"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
